--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -42,10 +42,10 @@ body {
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.6rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 2.56rem;
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
@@ -76,9 +76,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.28rem;
+    font-size: calc( 1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.21rem + (1.6 - 1.21) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -1753,30 +1753,14 @@ body {
 .cid-r2DsCW5BMG .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-r2DsEgQZaY {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-r2DMafRxDv {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-image: url("../../../assets/images/mbr-1920x1279.jpg");
 }
-.cid-r2DsEgQZaY h1 {
-  color: #616161;
-}
-.cid-r2DsEgQZaY h2,
-.cid-r2DsEgQZaY h3,
-.cid-r2DsEgQZaY p {
-  color: #767676;
-}
-.cid-r2DsEgQZaY .mbr-section-subtitle {
+.cid-r2DMafRxDv .mbr-section-subtitle {
   font-style: italic;
-}
-.cid-r2DsEgQZaY P {
-  color: #ffffff;
-}
-.cid-r2DsEgQZaY SPAN {
-  color: #ffffff;
-}
-.cid-r2DsEgQZaY H1 {
-  color: #ffffff;
+  letter-spacing: 1rem;
 }
 .cid-r2DB0pT2S4 {
   padding-top: 30px;
