--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -129,7 +129,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #ff0000 !important;
+  background-color: #f7ed4a !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -145,23 +145,23 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #ff0000 !important;
-  border-color: #ff0000 !important;
-  color: #ffffff !important;
+  background-color: #f7ed4a !important;
+  border-color: #f7ed4a !important;
+  color: #3f3c03 !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus,
 .btn-primary.active {
-  color: #ffffff !important;
-  background-color: #b30000 !important;
-  border-color: #b30000 !important;
+  color: #3f3c03 !important;
+  background-color: #eadd0a !important;
+  border-color: #eadd0a !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
-  color: #ffffff !important;
-  background-color: #b30000 !important;
-  border-color: #b30000 !important;
+  color: #3f3c03 !important;
+  background-color: #eadd0a !important;
+  border-color: #eadd0a !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -309,22 +309,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #990000;
-  color: #990000;
+  border-color: #d2c609;
+  color: #d2c609;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #ffffff;
-  background-color: #ff0000;
-  border-color: #ff0000;
+  color: #3f3c03;
+  background-color: #f7ed4a;
+  border-color: #f7ed4a;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
-  color: #ffffff !important;
-  background-color: #ff0000 !important;
-  border-color: #ff0000 !important;
+  color: #3f3c03 !important;
+  background-color: #f7ed4a !important;
+  border-color: #f7ed4a !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -461,7 +461,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #ff0000 !important;
+  color: #f7ed4a !important;
 }
 .text-secondary {
   color: #ff3366 !important;
@@ -486,7 +486,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #990000 !important;
+  color: #d2c609 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -544,9 +544,9 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #ff0000;
-  border-color: #ff0000;
-  color: #ffffff;
+  background-color: #f7ed4a;
+  border-color: #f7ed4a;
+  color: #585304;
 }
 .mbr-gallery-filter li.active .btn:focus {
   box-shadow: none;
@@ -562,11 +562,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #ff0000;
+  color: #f7ed4a;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #ffcccc;
+  color: #ffffff;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -684,7 +684,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #ff0000;
+  border-color: #f7ed4a;
   border-width: 3px;
 }
 ul,
@@ -772,7 +772,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #ff0000;
+  border-color: #f7ed4a;
   color: #232323;
   cursor: pointer;
 }
@@ -783,7 +783,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #ff0000;
+  background: #f7ed4a;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -791,11 +791,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #ff0000;
+  background: #f7ed4a;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #ff0000;
+  color: #f7ed4a;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
@@ -1372,485 +1372,23 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-r2DsCW5BMG .navbar {
-  padding: .5rem 0;
-  background: #333333;
-  transition: none;
-  min-height: 77px;
+.cid-r4dBP1QISU {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/mbr-1920x1280.jpg");
 }
-.cid-r2DsCW5BMG .navbar-dropdown.bg-color.transparent.opened {
-  background: #333333;
-}
-.cid-r2DsCW5BMG a {
-  font-style: normal;
-}
-.cid-r2DsCW5BMG .nav-item span {
-  padding-right: 0.4em;
-  line-height: 0.5em;
-  vertical-align: text-bottom;
-  position: relative;
-  text-decoration: none;
-}
-.cid-r2DsCW5BMG .nav-item a {
+.cid-r4dBP1QISU .mbr-figure {
+  margin: 0 auto;
+  width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
-  padding: 0.7rem 0 !important;
-  margin: 0rem .65rem !important;
 }
-.cid-r2DsCW5BMG .nav-item:focus,
-.cid-r2DsCW5BMG .nav-link:focus {
-  outline: none;
-}
-.cid-r2DsCW5BMG .btn {
-  padding: 0.4rem 1.5rem;
-  display: inline-flex;
-  align-items: center;
-}
-.cid-r2DsCW5BMG .btn .mbr-iconfont {
-  font-size: 1.6rem;
-}
-.cid-r2DsCW5BMG .menu-logo {
-  margin-right: auto;
-}
-.cid-r2DsCW5BMG .menu-logo .navbar-brand {
-  display: flex;
-  margin-left: 5rem;
-  padding: 0;
-  transition: padding .2s;
-  min-height: 3.8rem;
-  align-items: center;
-}
-.cid-r2DsCW5BMG .menu-logo .navbar-brand .navbar-caption-wrap {
-  display: -webkit-flex;
-  -webkit-align-items: center;
-  align-items: center;
-  word-break: break-word;
-  min-width: 7rem;
-  margin: .3rem 0;
-}
-.cid-r2DsCW5BMG .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
-  line-height: 1.2rem !important;
-  padding-right: 2rem;
-}
-.cid-r2DsCW5BMG .menu-logo .navbar-brand .navbar-logo {
-  font-size: 4rem;
-  transition: font-size 0.25s;
-}
-.cid-r2DsCW5BMG .menu-logo .navbar-brand .navbar-logo img {
-  display: flex;
-}
-.cid-r2DsCW5BMG .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
-  transition: font-size 0.25s;
-}
-.cid-r2DsCW5BMG .navbar-toggleable-sm .navbar-collapse {
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  padding-right: 5rem;
-  width: auto;
-}
-.cid-r2DsCW5BMG .navbar-toggleable-sm .navbar-collapse .navbar-nav {
-  flex-wrap: wrap;
-  -webkit-flex-wrap: wrap;
-  padding-left: 0;
-}
-.cid-r2DsCW5BMG .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
-  -webkit-align-self: center;
-  align-self: center;
-}
-.cid-r2DsCW5BMG .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
-  padding-left: 0;
-  padding-bottom: 0;
-}
-.cid-r2DsCW5BMG .dropdown .dropdown-menu {
-  background: #333333;
-  display: none;
-  position: absolute;
-  min-width: 5rem;
-  padding-top: 1.4rem;
-  padding-bottom: 1.4rem;
-  text-align: left;
-}
-.cid-r2DsCW5BMG .dropdown .dropdown-menu .dropdown-item {
-  width: auto;
-  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
-}
-.cid-r2DsCW5BMG .dropdown .dropdown-menu .dropdown-item::after {
-  right: 0.5rem;
-}
-.cid-r2DsCW5BMG .dropdown .dropdown-menu .dropdown-submenu {
-  margin: 0;
-}
-.cid-r2DsCW5BMG .dropdown.open > .dropdown-menu {
-  display: block;
-}
-.cid-r2DsCW5BMG .navbar-toggleable-sm.opened:after {
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  content: '';
-  background-color: rgba(0, 0, 0, 0.1);
-  left: 0;
-  bottom: 0;
-  transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  z-index: 1000;
-}
-.cid-r2DsCW5BMG .navbar.navbar-short {
-  min-height: 60px;
-  transition: all .2s;
-}
-.cid-r2DsCW5BMG .navbar.navbar-short .navbar-toggler-right {
-  top: 20px;
-}
-.cid-r2DsCW5BMG .navbar.navbar-short .navbar-logo a {
-  font-size: 2.5rem !important;
-  line-height: 2.5rem;
-  transition: font-size 0.25s;
-}
-.cid-r2DsCW5BMG .navbar.navbar-short .navbar-logo a .mbr-iconfont {
-  font-size: 2.5rem !important;
-}
-.cid-r2DsCW5BMG .navbar.navbar-short .navbar-logo a img {
-  height: 3rem !important;
-}
-.cid-r2DsCW5BMG .navbar.navbar-short .navbar-brand {
-  min-height: 3rem;
-}
-.cid-r2DsCW5BMG button.navbar-toggler {
-  width: 31px;
-  height: 18px;
-  cursor: pointer;
-  transition: all .2s;
-  top: 1.5rem;
-  right: 1rem;
-}
-.cid-r2DsCW5BMG button.navbar-toggler:focus {
-  outline: none;
-}
-.cid-r2DsCW5BMG button.navbar-toggler .hamburger span {
-  position: absolute;
-  right: 0;
-  width: 30px;
-  height: 2px;
-  border-right: 5px;
-  background-color: #ffffff;
-}
-.cid-r2DsCW5BMG button.navbar-toggler .hamburger span:nth-child(1) {
-  top: 0;
-  transition: all .2s;
-}
-.cid-r2DsCW5BMG button.navbar-toggler .hamburger span:nth-child(2) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-r2DsCW5BMG button.navbar-toggler .hamburger span:nth-child(3) {
-  top: 8px;
-  transition: all .15s;
-}
-.cid-r2DsCW5BMG button.navbar-toggler .hamburger span:nth-child(4) {
-  top: 16px;
-  transition: all .2s;
-}
-.cid-r2DsCW5BMG nav.opened .hamburger span:nth-child(1) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-r2DsCW5BMG nav.opened .hamburger span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  transition: all .25s;
-}
-.cid-r2DsCW5BMG nav.opened .hamburger span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  transition: all .25s;
-}
-.cid-r2DsCW5BMG nav.opened .hamburger span:nth-child(4) {
-  top: 8px;
-  width: 0;
-  opacity: 0;
-  right: 50%;
-  transition: all .2s;
-}
-.cid-r2DsCW5BMG .collapsed.navbar-expand {
-  flex-direction: column;
-}
-.cid-r2DsCW5BMG .collapsed .btn {
-  display: flex;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-collapse {
-  display: none !important;
-  padding-right: 0 !important;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.collapsing,
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.show {
-  display: block !important;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.collapsing .navbar-nav,
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.show .navbar-nav {
-  display: block;
-  text-align: center;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.show .navbar-nav .nav-item {
-  clear: both;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.collapsing .navbar-buttons,
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.show .navbar-buttons {
-  text-align: center;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
-.cid-r2DsCW5BMG .collapsed .navbar-collapse.show .navbar-buttons:last-child {
-  margin-bottom: 1rem;
-}
-.cid-r2DsCW5BMG .collapsed button.navbar-toggler {
-  display: block;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-brand {
-  margin-left: 1rem !important;
-}
-.cid-r2DsCW5BMG .collapsed .navbar-toggleable-sm {
-  flex-direction: column;
-  -webkit-flex-direction: column;
-}
-.cid-r2DsCW5BMG .collapsed .dropdown .dropdown-menu {
-  width: 100%;
-  text-align: center;
-  position: relative;
-  opacity: 0;
-  display: block;
-  height: 0;
-  visibility: hidden;
-  padding: 0;
-  transition-duration: .5s;
-  transition-property: opacity,padding,height;
-}
-.cid-r2DsCW5BMG .collapsed .dropdown.open > .dropdown-menu {
-  position: relative;
-  opacity: 1;
-  height: auto;
-  padding: 1.4rem 0;
-  visibility: visible;
-}
-.cid-r2DsCW5BMG .collapsed .dropdown .dropdown-submenu {
-  left: 0;
-  text-align: center;
-  width: 100%;
-}
-.cid-r2DsCW5BMG .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-  margin-top: 0;
-  position: inherit;
-  right: 0;
-  top: 50%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: .3em;
-  vertical-align: middle;
-  content: "";
-  border-top: .30em solid;
-  border-right: .30em solid transparent;
-  border-left: .30em solid transparent;
+.cid-r4dBP1QISU .mbr-figure img {
+  height: 100%;
+  margin: 0 auto;
 }
 @media (max-width: 991px) {
-  .cid-r2DsCW5BMG .navbar-expand {
-    flex-direction: column;
-  }
-  .cid-r2DsCW5BMG img {
-    height: 3.8rem !important;
-  }
-  .cid-r2DsCW5BMG .btn {
-    display: flex;
-  }
-  .cid-r2DsCW5BMG button.navbar-toggler {
-    display: block;
-  }
-  .cid-r2DsCW5BMG .navbar-brand {
-    margin-left: 1rem !important;
-  }
-  .cid-r2DsCW5BMG .navbar-toggleable-sm {
-    flex-direction: column;
-    -webkit-flex-direction: column;
-  }
-  .cid-r2DsCW5BMG .navbar-collapse {
-    display: none !important;
-    padding-right: 0 !important;
-  }
-  .cid-r2DsCW5BMG .navbar-collapse.collapsing,
-  .cid-r2DsCW5BMG .navbar-collapse.show {
-    display: block !important;
-  }
-  .cid-r2DsCW5BMG .navbar-collapse.collapsing .navbar-nav,
-  .cid-r2DsCW5BMG .navbar-collapse.show .navbar-nav {
-    display: block;
-    text-align: center;
-  }
-  .cid-r2DsCW5BMG .navbar-collapse.collapsing .navbar-nav .nav-item,
-  .cid-r2DsCW5BMG .navbar-collapse.show .navbar-nav .nav-item {
-    clear: both;
-  }
-  .cid-r2DsCW5BMG .navbar-collapse.collapsing .navbar-buttons,
-  .cid-r2DsCW5BMG .navbar-collapse.show .navbar-buttons {
-    text-align: center;
-  }
-  .cid-r2DsCW5BMG .navbar-collapse.collapsing .navbar-buttons:last-child,
-  .cid-r2DsCW5BMG .navbar-collapse.show .navbar-buttons:last-child {
-    margin-bottom: 1rem;
-  }
-  .cid-r2DsCW5BMG .dropdown .dropdown-menu {
-    width: 100%;
-    text-align: center;
-    position: relative;
-    opacity: 0;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    padding: 0;
-    transition-duration: .5s;
-    transition-property: opacity,padding,height;
-  }
-  .cid-r2DsCW5BMG .dropdown.open > .dropdown-menu {
-    position: relative;
-    opacity: 1;
-    height: auto;
-    padding: 1.4rem 0;
-    visibility: visible;
-  }
-  .cid-r2DsCW5BMG .dropdown .dropdown-submenu {
-    left: 0;
-    text-align: center;
-    width: 100%;
-  }
-  .cid-r2DsCW5BMG .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
-    margin-top: 0;
-    position: inherit;
-    right: 0;
-    top: 50%;
-    display: inline-block;
-    width: 0;
-    height: 0;
-    margin-left: .3em;
-    vertical-align: middle;
-    content: "";
-    border-top: .30em solid;
-    border-right: .30em solid transparent;
-    border-left: .30em solid transparent;
-  }
-}
-@media (min-width: 767px) {
-  .cid-r2DsCW5BMG .menu-logo {
-    flex-shrink: 0;
-  }
-}
-.cid-r2DsCW5BMG .navbar-collapse {
-  flex-basis: auto;
-}
-.cid-r2DsCW5BMG .nav-link:hover,
-.cid-r2DsCW5BMG .dropdown-item:hover {
-  color: #c1c1c1 !important;
-}
-.cid-r2DMafRxDv {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-image: url("../../../assets/images/mbr-1920x1279.jpg");
-}
-.cid-r2DMafRxDv .mbr-section-subtitle {
-  font-style: italic;
-  letter-spacing: 1rem;
-}
-.cid-r2DB0pT2S4 {
-  padding-top: 30px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-r2DB0pT2S4 h3 {
-  text-align: center;
-}
-.cid-r2DB0pT2S4 .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-r2DB0pT2S4 .mbr-content-text {
-  color: #767676;
-}
-.cid-r2DB0pT2S4 .panel-item {
-  background: #ffffff;
-}
-.cid-r2DB0pT2S4 .card {
-  word-wrap: break-word;
-}
-.cid-r2DB0pT2S4 .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
-}
-.cid-r2DxKL5z9j {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
-}
-@media (max-width: 767px) {
-  .cid-r2DxKL5z9j .content {
-    text-align: center;
-  }
-  .cid-r2DxKL5z9j .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r2DxKL5z9j .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r2DxKL5z9j .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r2DxKL5z9j .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r2DxKL5z9j .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r2DxKL5z9j .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r2DxKL5z9j .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-r2DxKL5z9j .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r2DxKL5z9j .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r2DxKL5z9j .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r2DxKL5z9j .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r2DxKL5z9j .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
+  .cid-r4dBP1QISU .mbr-figure img {
+    width: 100% !important;
   }
 }
